// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component/navbar should have a default behaviour 1`] = `
<nav
  className={
    Object {
      "data-css-up45um": "",
    }
  }
  style={Object {}}
>
  <div
    className={
      Object {
        "data-css-qdfag2": "",
      }
    }
  >
    react-workbench
  </div>
  <div
    className={
      Object {
        "data-css-1u7y7sm": "",
      }
    }
  >
    <navButton
      label="workbench"
      route="/"
    />
    <navButton
      label="documentation"
      route="/documentation"
    />
  </div>
</nav>
`;

exports[`component/navbar should take custom className 1`] = `
<nav
  className={
    Object {
      "data-css-9ky4b0": "",
    }
  }
  style={Object {}}
>
  <div
    className={
      Object {
        "data-css-qdfag2": "",
      }
    }
  >
    react-workbench
  </div>
  <div
    className={
      Object {
        "data-css-1u7y7sm": "",
      }
    }
  >
    <navButton
      label="workbench"
      route="/"
    />
    <navButton
      label="documentation"
      route="/documentation"
    />
  </div>
</nav>
`;

exports[`component/navbar should take custom style 1`] = `
<nav
  className={
    Object {
      "data-css-up45um": "",
    }
  }
  style={
    Object {
      "backgroundColor": "red",
    }
  }
>
  <div
    className={
      Object {
        "data-css-qdfag2": "",
      }
    }
  >
    react-workbench
  </div>
  <div
    className={
      Object {
        "data-css-1u7y7sm": "",
      }
    }
  >
    <navButton
      label="workbench"
      route="/"
    />
    <navButton
      label="documentation"
      route="/documentation"
    />
  </div>
</nav>
`;
